--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "OpenGL_startup_project/vendor/glm"]
 	path = OpenGL_startup_project/vendor/glm
 	url = https://github.com/g-truc/glm
+[submodule "OpenGL_startup_project/vendor/freetype"]
+	path = OpenGL_startup_project/vendor/freetype
+	url = https://github.com/freetype/freetype.git
